Update watch page with buttons and stats (hidden by default), tooltip and watch page CSS fixes, fix touchsomegrass theme, & fix penguino page z-index issues

--- a/assets/css/tooltip.css
+++ b/assets/css/tooltip.css
@@ -1,11 +1,5 @@
 @import url("root.css");
 
-.tooltip {
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-}
-
 /* the actual bubble */
 .tooltip::after {
     font-family: var(--tooltip_font);
