--- a/assets/css/viewer.css
+++ b/assets/css/viewer.css
@@ -21,10 +21,17 @@ main {
     margin-top: 80px;
 }
 
-#maininfo {
+#videometa {
     display: flex;
     align-items: center;
     gap: 10px;
+}
+
+#videostats {
+    font-size: 10px;
+    color: gray;
+    margin-left: 5px;
+    margin-top: 4px;
 }
 
 #video-player iframe {
@@ -58,14 +65,8 @@ main {
 }
 
 #actions {
-    margin-right: 5px;
-}
-
-#actions button span {
-    font-family: var(--symbols-font)
-}
-
-.miiverse-btn #count {
-  font-family: Arial, Helvetica, sans-serif !important;
-  font-weight: bold;
+    margin-right: 6px;
+    display: flex;
+    flex-direction: row;
+    gap: 3px;
 }
